--- a/src/index.html
+++ b/src/index.html
@@ -16,5 +16,7 @@
     <body>
         <h1>Hello from Electron html content!</h1>
         <p>👋</p>
+        <p id="info"></p>
     </body>
+    <script src="./renderer.js"></script>
 </html>
