okay!  ts renderer is easy.  although i have a lot to learn about how to tell it about the existing environment for type purposes.

--- a/src/index.html
+++ b/src/index.html
@@ -18,5 +18,5 @@
         <p>👋</p>
         <p id="info"></p>
     </body>
-    <script src="./renderer.js"></script>
+    <script src="../dist/renderer.js"></script>
 </html>
